fixed alignment of buttons

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
   position: relative;
   }
 
-
 body {
   background-color: #4f60ad;
   margin: 0 auto;
@@ -23,6 +22,7 @@ body {
   display:flex;
   flex-direction: column;
   width: 100vw !important;
+  height: 93vh;
 }
 
 body:before {
@@ -41,23 +41,6 @@ body:before {
   margin-top: 0% !important;
   max-width: 800px;
   max-height: 600px;
-  margin: 0 auto;
-}
-
-#wrapper {
-  /* width: 60vw; */
-  width: 100vw;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  margin: 0 auto;
-  text-align: center;
-}
-
-#wrapper img {
-  width: 100%;
-  bottom: 0;
-  left: 0;
   margin: 0 auto;
 }
 
@@ -120,14 +103,29 @@ header {
   right: 0;
 	margin-right: 2%;
 	cursor: pointer;
+  margin-top: -5px;
 }
 
 .chat-nav {
   position: absolute;
+  bottom: 0;
   right: 0;
+  height: 40px;
+  padding: 0 !important;
   margin-right: 2%;
   cursor: pointer;
 }
+
+.chat-nav a {
+  display: inline-block;
+  height: 40px;
+  line-height: 1em;
+  padding-left: 5%;
+  color: #FFF;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif !important;
+  font-weight: lighter;
+ }
 
 a {
 	display: inline-block;
